[package]
name = "cryp_alg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryp_std = { path = "../cryp_std", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
num-bigint = "0.4"
criterion = "0.3"

[features]
default = []
std = ["cryp_std/std", "zeroize/std"]
bigint = ["std"]


[[bench]]
name = "bench_fields"
harness = false